# tcc-sentiment-analysis

./: .coverage  .gitattributes  .gitignore  Makefile  README.md  generate_project_file_structure.py  generate_src_structure.py  main.py  pyproject.toml  setup.ps1
.github/workflows/: ci.yml
config/: data_paths.yaml  data_sources.yaml  model_analysis.default.json
config/optuna/: default_tft_optuna_sweep.json
config/sweeps/: 0_0_1_sweep_baseline_vs_encoder120_10seeds.json  0_0_2_sweep_encoder_120_150_180_3seeds.json  0_0_3_walk_forward_baseline_vs_encoder120_3seeds.json  0_1_0_sweep_all_params_robust_3wf_5seeds.json  0_1_2_all_params_max_encoder_fix2_3wf_5seeds.json
dataset/processed/: dataset.csv
docs/: GETTING_STARTED.md  GIT_GUIDE.md  MVP_CHECKLIST.md  PROJECT_STRUCTURE.md  RUNNING_MODEL_ANALYSIS_SWEEPS.md  RUNNING_PIPELINE.md  RUNNING_TESTS.md  TODO_GUIDE.md  TRAIN_TFT_PARAMS.md  TROUBLESHOOTING.md
html/Investing/: stock_market_news.html  stock_market_news2.html
html/Yahoo/: stock_market_news.html
notebooks/: pipeline.ipynb
notebooks/data/: create_dataframes.ipynb  dynamic-scrape.ipynb
notebooks/inference/: finbert.ipynb
notebooks/models/: Notebook2_modelo.ipynb  bert-example.ipynb
notebooks/news_search/: funnhub_search.ipynb
notebooks/scraping/: concat_dataframes.ipynb  (+3 more)
src/: main.py  main_audit.py  main_candles.py  main_data_pipeline.py  main_dataset_tft.py  main_features.py  main_fundamentals.py  main_generate_sweep_artifacts.py  main_generate_sweep_plots.py  main_model_analysis.py  main_news_dataset.py  main_pipeline.py  main_score_news.py  main_sentiment.py  main_sentiment_features.py  main_technical_indicators.py  main_tft_optuna_sweep.py  main_tft_param_sweep.py  main_train_tft.py
(+143 files in other folders)
